# cortex-webkit

./: .env.example  .gitignore  README.md  pyproject.toml
docs/tech-debt/: webkit-tech-debt.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/chat/: ChatInput.tsx  ChatPanel.tsx  MessageBubble.tsx  StreamingText.tsx  ToolCallCard.tsx
frontend/src/components/commands/: CommandInput.tsx  (+4 more)
frontend/src/hooks/: useChatSession.ts  useHotkeys.ts  useWebSocket.ts
frontend/src/layouts/: PanelContainer.tsx
frontend/src/lib/: api.ts  markdown.ts  parseCommand.ts  ws.ts
frontend/src/stores/: chatStore.ts  commandStore.ts  connectionStore.ts  layoutStore.ts
frontend/src/types/: chat.ts  commands.ts  ws.ts
scripts/: build.sh  dev.sh  mock_server.py
src/cortex_webkit/: __init__.py  __main__.py  app.py  auth.py  config.py  events.py  session.py
src/cortex_webkit/api/: commands.py  editor.py  sessions.py  settings.py  status.py
src/cortex_webkit/backends/: base.py  cli.py
src/cortex_webkit/data/: command_risk.json
src/cortex_webkit/models/: chat.py  commands.py
src/cortex_webkit/services/: editor.py  event_bus.py  unreal.py
src/cortex_webkit/ws/: chat.py  events.py
tests/: conftest.py  test_api_commands.py  test_api_editor.py  test_api_sessions.py  test_api_settings.py  test_api_status.py  test_auth.py  test_cli_backend.py  test_config.py  test_editor_lifecycle_manager.py  test_event_bus.py  test_events.py  test_session_manager.py  test_ws_chat.py
(+4 files in other folders)
